<resources>
    <string name="app_name">LararApp</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>


    <!--ACTIVITY REGISTER-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="ConfirmPassword">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengoUnaCuentaTXT">Tengo una cuenta</string>


    <!--ACTIVITY LOGIN-->
    <string name="IniciarSesionTXT">Iniciar sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassPLogin">Clave</string>
    <string name="Btn_Logeo">Ingresas</string>
    <string name="UsuarioNuevoTXT">¿Sin cuenta? Registrarse</string>

    <!--MENU PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido</string>
    <string name="NombrePrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="UidPrincipal"> -- </string>
    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Archivados">Archivados</string>
    <string name="Perfil">Perfil</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="CerrarSesion">Salir</string>

    <!--ADD NOTES-->
    <string name="Uid_Usuario">Uid del user</string>
    <string name="Correo_usuario">Correo del user</string>
    <string name="Fecha_Hora_Actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descricion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No finalizado</string>

    <!--MENU -->
    <string name="Agregar_Nota_BD">Agregar</string>

    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item"> Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item"> Título </string>
    <string name="Descripcion_Item"> Descripcion</string>
    <string name="Fecha_Item"> 00/00/0000 </string>
    <string name="Estado_Item"> No finalizado</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Estado_A"> No finalizado</string>
    <string name="Estado_nuevo"> -- </string>

    <!---SPINNER - ESTADO-->
    <string-array name="Estados_nota">
        <item>"No finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!--DETALLE NOTA-->
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de usuario: </string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Título: </string>
    <string name="Titulo_Detalle">Título</string>
    <string name="Descripcion_Detalle_TXT">Descripción: </string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha nota: </string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Estado_Detalle_TXT">Estado de la nota: </string>
    <string name="Estado_Detalle">Estado</string>

</resources>