<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                
                <TextView
                    android:text="@string/BienvenidoPrincipal"
                    android:textColor="#fff"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:id="@+id/progressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/Uid_Principal"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="#fff"
                    android:visibility="gone"
                    android:fontFamily="@font/worksans"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!--Nombres-->
                <TextView
                    android:id="@+id/NombrePrincipal"
                    android:text="@string/NombrePrincipal"
                    android:textColor="#fff"
                    android:visibility="gone"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!--Correo-->
                <TextView
                    android:id="@+id/CorreoPrincipal"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="#fff"
                    android:visibility="gone"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/agregar"/>
                    <Button
                        android:id="@+id/AgregarNotas"
                        android:text="@string/AgregarNotas"
                        android:enabled="false"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/lista"/>
                    <Button
                        android:id="@+id/ListarNotas"
                        android:text="@string/ListarNotas"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:fontFamily="@font/worksans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/archivados"/>
                    <Button
                        android:id="@+id/Archivados"
                        android:text="@string/Archivados"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/perfil"/>
                    <Button
                        android:id="@+id/Perfil"
                        android:text="@string/Perfil"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="2">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/acerca_de"/>
                <Button
                    android:id="@+id/AcercaDe"
                    android:text="@string/AcercaDe"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/worksans"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/salir"/>
                <Button
                    android:id="@+id/CerrarSesion"
                    android:text="@string/CerrarSesion"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/worksans"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>